Add second controller.
