# config/api-definitions.yml
@@ -20,10 +20,10 @@ tags:
 schemes:
 - "http"
 paths:
-  /donuts:
+  /donut:
     get:
       tags:
-      - "desert"
+      - "desert-controller"
       summary: "Available Donuts"
       description: "All generated donuts returned."
       operationId: "myDonuts"
@@ -40,6 +40,48 @@ paths:
               $ref: "#/definitions/Donut"
         400:
           description: "Invalid status value"
+    post:
+      tags:
+        - "desert-controller"
+      summary: "Add a new donut"
+      description: ""
+      operationId: "addDonut"
+      consumes:
+        - "application/json"
+        - "application/xml"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Donut object that needs to be added"
+          required: true
+          schema:
+            $ref: "#/definitions/Donut"
+      responses:
+        405:
+          description: "Invalid input"
+  /maincourse:
+    get:
+      tags:
+        - "maincourse-controller"
+      summary: "Available maincourse"
+      description: "All generated maincourse returned."
+      operationId: "myMaincourse"
+      consumes:
+        - "*/*"
+      produces:
+        - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Maincourse"
+        400:
+          description: "Invalid status value"
 definitions:
   Donut:
     type: "object"
@@ -54,6 +96,20 @@ definitions:
         type: "string"
     xml:
       name: "Donut"
+  Maincourse:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      size:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+    xml:
+      name: "Maincourse"
+
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
